--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Galaxy Digital</title>
 </head>
 <body>
-  <h1>GitHub Pages Subdomain Takeover POC</h1>
+  <h1>GitHub Pages Subdomain Takeover POC by dark_river</h1>
 </body>
 </html>
